--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "express": "3.2.5",
     "ejs": "*",
-    "express-ejs-layouts": "*"
+    "express-ejs-layouts": "*",
+    "socket.io": "~0.9.14"
   }
 }
