--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "express": "3.2.5",
     "ejs": "*",
     "express-ejs-layouts": "*",
-    "socket.io": "~0.9.14"
+    "socket.io": "~0.9.14",
+    "chai": "~1.6.1"
   }
 }
