--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "ejs": "*",
     "express-ejs-layouts": "*",
     "socket.io": "~0.9.14",
-    "chai": "~1.6.1"
+    "chai": "~1.6.1",
+    "sinon": "*"
   }
 }
